# openmeet

./: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  app.py  auth.py  config.py  database.py  email_service.py  main.py  payment_provider.py  pyproject.toml  rbac.py  seed.py  tasks.py
backend/alembic/: env.py
backend/alembic/versions/: 2ed7a8955b7a_initial_schema.py  53057afda020_refactor_roles_simplify_userrole_make_.py  a1b2c3d4e5f6_add_invitation_notification_event_page.py  f8a3c9d1e2b4_add_user_role_and_superuser.py
backend/docs/: SCHEMA.md  SPEC.md
backend/gql_schema/: mutations.py
backend/gql_schema/inputs/: __init__.py  auth_input.py  event_input.py  order_input.py
backend/gql_schema/queries/: __init__.py
backend/gql_schema/services/: __init__.py  attendee_service.py  base.py  event_page_service.py  event_service.py  mapping.py  notification_service.py  order_service.py  organization_service.py  payment_service.py  ticket_service.py  user_service.py
backend/gql_schema/types/: __init__.py  attendee.py  audit_log.py  auth.py  email_log.py  event.py  event_page.py  event_staff.py  invitation.py  notification.py  order.py  (+3 more)
backend/models/: __init__.py  attendee.py  audit_log.py  base.py  email_log.py  event.py  event_page.py  event_staff.py  follower.py  invitation.py  member.py  notification.py  order.py  order_item.py  organization.py  payment.py  refresh_token.py  ticket.py  user.py
backend/tests/: conftest.py  test_auth.py  test_rbac.py  test_services.py
(+77 files in other folders)
