[project]
name = "openmeets-backend"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "sqlmodel>=0.0.37",
    "strawberry-graphql>=0.308.3",
    "uvicorn[standard]>=0.41.0",
]
