[project]
name = "openmeets-backend"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.18.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.0.0",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.3.0",
    "faker>=30.0.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "sqlmodel>=0.0.37",
    "strawberry-graphql>=0.308.3",
    "uvicorn[standard]>=0.41.0",
]
